# AVP_Core_Implementation

./: .gitignore  CMakeLists.txt  README.md  install_ROS2.sh  install_ros2.sh  package.xml  readme.md
config/dds/: fastdds.xml
docs/: Roadmap.md  queue_policy.md  sync_policy.md  yocto_build_notes.md
include/: CoreOptimizer.hpp  preprocess.hpp  trt_infer.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/AVP_Core_Implementation/lib/AVP_Core_Implementation/: avp_main_node  week1_perf_test
install/AVP_Core_Implementation/share/AVP_Core_Implementation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/AVP_Core_Implementation/share/AVP_Core_Implementation/cmake/: AVP_Core_ImplementationConfig-version.cmake  AVP_Core_ImplementationConfig.cmake
install/AVP_Core_Implementation/share/AVP_Core_Implementation/environment/: ament_prefix_path.dsv  path.dsv
install/AVP_Core_Implementation/share/ament_index/resource_index/package_run_dependencies/: AVP_Core_Implementation
install/AVP_Core_Implementation/share/ament_index/resource_index/parent_prefix_path/: AVP_Core_Implementation
launch/: avp_core_implementation.launch.py  trt_image_infer.launch.py  trt_stream_infer.launch.py
log/: latest_build
msg/: ParkingSlot.msg  VehicleState.msg
results/: image_package_baseline.txt  image_package_baseline_add_packages.txt  run_info.txt
scripts/: env_dds.sh  run_CARLA.sh  run_CARLA_remote.sh  run_camera_check.sh  run_local.sh  run_sync_test.sh  run_yocto_build.sh
src/: AVP_controller.cpp  AVP_main.cpp  main.cpp  sync_harness_node.cpp  trt_infer_node.cpp
src/preprocess/: preprocess.cu  preprocess_cpu.cpp
tools/: week10_carla_image_pub.py  week9_spawn_camera_check.py
